--- a/app/src/main/res/layout/activity4_certified.xml
+++ b/app/src/main/res/layout/activity4_certified.xml
@@ -9,29 +9,33 @@
     tools:context=".Activity4Certified" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="154dp"
-        android:orientation="vertical"></LinearLayout>
-
-    <ImageView
-        android:id="@+id/imgv_Imgv"
-        android:layout_width="357dp"
-        android:layout_height="197dp"
-        android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/certification_txt" />
-
-    <ImageView
-        android:id="@+id/ibtn_Attach"
-        android:layout_width="300dp"
-        android:layout_height="87dp"
-        android:layout_gravity="center"
-        android:background="#EBE9E3"
-        android:scaleType="centerInside"
-        app:srcCompat="@drawable/attach_btn" />
-
-    <Button
-        android:id="@+id/ibtn_Intent"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="150dp">
+
+        <ImageView
+            android:id="@+id/imgImgv"
+            android:layout_width="360dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/certification_txt" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:paddingTop="50dp">
+
+        <ImageView
+            android:id="@+id/btnAttach"
+            android:layout_width="300dp"
+            android:layout_height="87dp"
+            android:background="#EBE9E3"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/attach_btn" />
+    </LinearLayout>
+
 </LinearLayout>
