--- a/app/src/main/res/layout/activity6_reader.xml
+++ b/app/src/main/res/layout/activity6_reader.xml
@@ -74,7 +74,7 @@
                     android:textSize="18dp" />
 
                 <ImageView
-                    android:id="@+id/imgv_Imgv"
+                    android:id="@+id/imgImgv"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="7dp"
