--- a/app/src/main/res/layout/activity6_reader.xml
+++ b/app/src/main/res/layout/activity6_reader.xml
@@ -66,7 +66,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
-                        android:text="좋아요 : 10회"
+                        android:text="좋아요 : "
+                        android:textSize="12dp" />
+                    <TextView
+                        android:id="@+id/tv_likecnt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10회"
                         android:textSize="12dp" />
                 </LinearLayout>
 
@@ -81,7 +87,7 @@
                     android:textSize="18dp" />
 
                 <ImageView
-                    android:id="@+id/imgImgv"
+                    android:id="@+id/likebtn"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="7dp"
