--- a/app/src/main/res/layout/main_items.xml
+++ b/app/src/main/res/layout/main_items.xml
@@ -90,9 +90,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:id="@+id/m_likecnt"
                                     android:paddingLeft="3dp"
                                     android:paddingRight="5dp"
-                                    android:text="0"
+                                    android:text="7"
                                     android:textSize="12dp" />
 
                                 <ImageView
