--- a/app/src/main/res/layout/activity2_login.xml
+++ b/app/src/main/res/layout/activity2_login.xml
@@ -4,102 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
-    android:background="#EBE9E3"
     tools:context=".Activity2Login">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="bottom|center|left"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingTop="100dp"
-        android:paddingBottom="30dp">
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="175dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/login_text" />
+        android:paddingLeft="10dp">
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            app:srcCompat="@drawable/login_text_guide" />
+            android:layout_width="300dp"
+            android:layout_height="120dp"
+            app:srcCompat="@drawable/activity2login01" />
     </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/laySinMail"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="380sp"
-        android:layout_height="60sp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="10dp"
-        android:hint="이메일을 입력해주세요."
-        app:boxStrokeColor="#A7B0C2"
-        app:hintTextColor="#7C7C7C"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtLoginMail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:textCursorDrawable="@drawable/cursor" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/laySinMail"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="380sp"
+            android:layout_height="60sp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="10dp"
+            android:hint="이메일을 입력해주세요."
+            app:boxStrokeColor="#A7B0C2"
+            app:hintTextColor="#7C7C7C"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.35">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtLoginMail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textCursorDrawable="@drawable/cursor" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layPwd"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="380sp"
-        android:layout_height="60sp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:hint="비밀번호를 입력해주세요."
-        app:boxStrokeColor="#A7B0C2"
-        app:hintTextColor="#7C7C7C"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.50">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtLoginPwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textCursorDrawable="@drawable/cursor" />
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layPwd"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="380sp"
+            android:layout_height="60sp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:hint="비밀번호를 입력해주세요."
+            app:boxStrokeColor="#A7B0C2"
+            app:hintTextColor="#7C7C7C"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.50">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtLoginPwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textCursorDrawable="@drawable/cursor" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:paddingTop="35dp">
+        android:layout_weight="1"
+        android:gravity="center|top"
+        android:orientation="vertical">
 
-        <Button
+        <ImageView
             android:id="@+id/btnLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="로그인" />
+            android:layout_width="200dp"
+            android:layout_height="70dp"
+            app:srcCompat="@drawable/activity2login02" />
 
-        <Button
+        <ImageView
             android:id="@+id/btnJoin"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="회원가입" />
-
+            android:layout_height="70dp"
+            app:srcCompat="@drawable/activity2login03" />
     </LinearLayout>
 
 </LinearLayout>
