--- a/app/src/main/res/layout/activity4_certified.xml
+++ b/app/src/main/res/layout/activity4_certified.xml
@@ -9,33 +9,37 @@
     tools:context=".Activity4Certified" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="bottom|center|left"
         android:orientation="vertical"
-        android:paddingTop="150dp">
+        android:paddingLeft="10dp">
 
         <ImageView
-            android:id="@+id/imgImgv"
-            android:layout_width="360dp"
-            android:layout_height="200dp"
-            app:srcCompat="@drawable/certification_txt" />
+            android:id="@+id/imgvAct4Title"
+            android:layout_width="320dp"
+            android:layout_height="120dp"
+            app:srcCompat="@drawable/activity4certified01" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:paddingTop="50dp">
+        android:layout_weight="0.3"
+        android:orientation="vertical"></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center|top"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/btnAttach"
-            android:layout_width="300dp"
-            android:layout_height="87dp"
-            android:background="#EBE9E3"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/attach_btn" />
+            android:layout_width="200dp"
+            android:layout_height="70dp"
+            app:srcCompat="@drawable/activity4certified02" />
     </LinearLayout>
-
 </LinearLayout>
