--- a/app/src/main/res/layout/waitingforapproval.xml
+++ b/app/src/main/res/layout/waitingforapproval.xml
@@ -9,36 +9,24 @@
     tools:context=".Waitingforapproval">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:gravity="center|left"
         android:orientation="vertical"
-        android:paddingTop="130dp">
+        android:paddingLeft="10dp"
+        android:paddingTop="200dp">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imgvActWTitle1"
             android:layout_width="350dp"
             android:layout_height="120dp"
             app:srcCompat="@drawable/welcome" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imgvActWTitle2"
             android:layout_width="350dp"
             android:layout_height="70dp"
             app:srcCompat="@drawable/welcome_txt" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:paddingTop="100dp">
-
-        <Button
-            android:id="@+id/btnEnter"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:text="시작하기" />
-    </LinearLayout>
 </LinearLayout>
