--- a/app/src/main/res/layout/activity4_certified.xml
+++ b/app/src/main/res/layout/activity4_certified.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBE9E3"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
-    tools:context=".Activity4Certified" >
+    tools:context=".Activity4Certified">
 
     <LinearLayout
         android:layout_width="match_parent"
