--- a/app/src/main/res/layout/activity6_reader.xml
+++ b/app/src/main/res/layout/activity6_reader.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBE9E3"
+    android:background="@drawable/gradient"
+    android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingTop="5dp"
     android:paddingEnd="5dp"
     android:paddingBottom="5dp"
-    android:orientation="vertical"
     tools:context=".Activity6Reader">
 
     <androidx.core.widget.NestedScrollView
@@ -32,9 +32,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:orientation="vertical"
                     android:paddingLeft="14dp"
-                    android:paddingRight="14dp"
-                    android:orientation="vertical">
+                    android:paddingRight="14dp">
 
                     <ImageButton
                         android:id="@+id/ibtn_Back"
@@ -96,8 +96,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="4dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingLeft="4dp">
 
                     <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/likeAnimButton"
@@ -111,9 +111,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:orientation="vertical"
                     android:paddingLeft="14dp"
-                    android:paddingRight="14dp"
-                    android:orientation="vertical">
+                    android:paddingRight="14dp">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/commentRecyclerView"
@@ -135,9 +135,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
             app:cardElevation="4dp"
-            app:cardUseCompatPadding="true"
-            app:cardCornerRadius="10dp">
+            app:cardUseCompatPadding="true">
 
 
             <LinearLayout
@@ -160,9 +160,9 @@
                     android:id="@+id/editTextTextPersonName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="12dp"
                     android:hint="댓글을 입력하세요."
-                    android:textSize="15dp"/>
+                    android:paddingLeft="12dp"
+                    android:textSize="15dp" />
 
 
             </LinearLayout>
