--- a/app/src/main/res/layout/activity7_writer.xml
+++ b/app/src/main/res/layout/activity7_writer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBE9E3"
+    android:background="@drawable/gradient"
     tools:context=".Activity7Writer">
 
 
