--- a/app/src/main/res/layout/activity9_groupchat.xml
+++ b/app/src/main/res/layout/activity9_groupchat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBE9E3"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
     tools:context=".Activity9Groupchat">
 
