--- a/app/src/main/res/layout/waitingforapproval.xml
+++ b/app/src/main/res/layout/waitingforapproval.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
-    android:background="#EBE9E3"
     tools:context=".Waitingforapproval">
 
     <LinearLayout
